# starting-ragchatbot-codebase

./: CLAUDE.md  architecture_diagram.html  clear_architecture_diagram.html  dev-tools.md  format.sh  frontend-changes.md  pyproject.toml  quality-check.sh  query_flow_diagram.html
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: conftest.py  quick_test_check.py  test_ai_generator.py  test_ai_generator_simple.py  test_api_endpoints.py  test_basic.py  test_course_search_tool.py  test_rag_system.py  test_tools_simple.py  test_vector_store.py  verify_test_setup.py
frontend/: index.html  script.js  style.css
